{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 6,
  "lineage": "ff4a3f11-9741-eff8-338a-379774f67cdb",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg-911",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/97fc8072-f685-42b4-972e-790cc5636124/resourceGroups/mtc-rg-911-name/providers/Microsoft.Network/networkSecurityGroups/nsg-911",
            "location": "eastus",
            "name": "nsg-911",
            "resource_group_name": "mtc-rg-911-name",
            "security_rule": [],
            "tags": {
              "enviroment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.mtc-rg-911"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/97fc8072-f685-42b4-972e-790cc5636124/resourceGroups/mtc-rg-911-name/providers/Microsoft.Network/networkSecurityGroups/nsg-911/securityRules/nsg-rule-911",
            "name": "nsg-rule-911",
            "network_security_group_name": "nsg-911",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "mtc-rg-911-name",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg-911",
            "azurerm_resource_group.mtc-rg-911"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sub-net",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/97fc8072-f685-42b4-972e-790cc5636124/resourceGroups/mtc-rg-911-name/providers/Microsoft.Network/virtualNetworks/vnet-911/subnets/sub-net-911",
            "name": "sub-net-911",
            "resource_group_name": "mtc-rg-911-name",
            "virtual_network_name": "vnet-911"
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg-911",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1d6f1222-30f9-474d-b976-1ac773ce2255",
            "id": "/subscriptions/97fc8072-f685-42b4-972e-790cc5636124/resourceGroups/mtc-rg-911-name/providers/Microsoft.Network/virtualNetworks/vnet-911",
            "location": "eastus",
            "name": "vnet-911",
            "resource_group_name": "mtc-rg-911-name",
            "tags": {
              "enviroment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg-911"
          ]
        }
      ]
    }
  ]
}